Fix naive predictions to forecast multiple time steps, fixes #421

--- a/15_processing_sequences_using_rnns_and_cnns.ipynb
+++ b/15_processing_sequences_using_rnns_and_cnns.ipynb
@@ -1069,7 +1069,7 @@
     {
      "data": {
       "text/plain": [
-       "0.22278848"
+       "0.25697407"
       ]
      },
      "execution_count": 31,
@@ -1078,7 +1078,7 @@
     }
    ],
    "source": [
-    "Y_naive_pred = Y_valid[:, -1:]\n",
+    "Y_naive_pred = np.tile(X_valid[:, -1], 10) # take the last time step value, and repeat it 10 times\n",
     "np.mean(keras.metrics.mean_squared_error(Y_valid, Y_naive_pred))"
    ]
   },
