Fix MyRNN shape issues, fixes #457

--- a/15_processing_sequences_using_rnns_and_cnns.ipynb
+++ b/15_processing_sequences_using_rnns_and_cnns.ipynb
@@ -1624,20 +1624,23 @@
     "        self.get_initial_state = getattr(\n",
     "            self.cell, \"get_initial_state\", self.fallback_initial_state)\n",
     "    def fallback_initial_state(self, inputs):\n",
-    "        return [tf.zeros([self.cell.state_size], dtype=inputs.dtype)]\n",
+    "        batch_size = tf.shape(inputs)[0]\n",
+    "        return [tf.zeros([batch_size, self.cell.state_size], dtype=inputs.dtype)]\n",
     "    @tf.function\n",
     "    def call(self, inputs):\n",
     "        states = self.get_initial_state(inputs)\n",
-    "        n_steps = tf.shape(inputs)[1]\n",
-    "        if self.return_sequences:\n",
-    "            sequences = tf.TensorArray(inputs.dtype, size=n_steps)\n",
-    "        outputs = tf.zeros(shape=[n_steps, self.cell.output_size], dtype=inputs.dtype)\n",
+    "        shape = tf.shape(inputs)\n",
+    "        batch_size = shape[0]\n",
+    "        n_steps = shape[1]\n",
+    "        sequences = tf.TensorArray(\n",
+    "            inputs.dtype, size=(n_steps if self.return_sequences else 0))\n",
+    "        outputs = tf.zeros(shape=[batch_size, self.cell.output_size], dtype=inputs.dtype)\n",
     "        for step in tf.range(n_steps):\n",
     "            outputs, states = self.cell(inputs[:, step], states)\n",
     "            if self.return_sequences:\n",
     "                sequences = sequences.write(step, outputs)\n",
     "        if self.return_sequences:\n",
-    "            return sequences.stack()\n",
+    "            return tf.transpose(sequences.stack(), [1, 0, 2])\n",
     "        else:\n",
     "            return outputs"
    ]
@@ -1651,47 +1654,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 7000 samples, validate on 2000 samples\n",
       "Epoch 1/20\n",
-      "7000/7000 [==============================] - 12s 2ms/sample - loss: 0.2208 - last_time_step_mse: 0.2084 - val_loss: 0.0874 - val_last_time_step_mse: 0.0761\n",
+      "219/219 [==============================] - 7s 27ms/step - loss: 0.2860 - last_time_step_mse: 0.2822 - val_loss: 0.0734 - val_last_time_step_mse: 0.0624\n",
       "Epoch 2/20\n",
-      "7000/7000 [==============================] - 10s 1ms/sample - loss: 0.0724 - last_time_step_mse: 0.0604 - val_loss: 0.0628 - val_last_time_step_mse: 0.0508\n",
+      "219/219 [==============================] - 6s 26ms/step - loss: 0.0679 - last_time_step_mse: 0.0546 - val_loss: 0.0566 - val_last_time_step_mse: 0.0423\n",
       "Epoch 3/20\n",
-      "7000/7000 [==============================] - 10s 1ms/sample - loss: 0.0577 - last_time_step_mse: 0.0439 - val_loss: 0.0537 - val_last_time_step_mse: 0.0389\n",
+      "219/219 [==============================] - 6s 26ms/step - loss: 0.0553 - last_time_step_mse: 0.0406 - val_loss: 0.0509 - val_last_time_step_mse: 0.0342\n",
       "Epoch 4/20\n",
-      "7000/7000 [==============================] - 10s 1ms/sample - loss: 0.0506 - last_time_step_mse: 0.0363 - val_loss: 0.0485 - val_last_time_step_mse: 0.0327\n",
+      "219/219 [==============================] - 6s 27ms/step - loss: 0.0485 - last_time_step_mse: 0.0328 - val_loss: 0.0442 - val_last_time_step_mse: 0.0286\n",
       "Epoch 5/20\n",
-      "7000/7000 [==============================] - 10s 1ms/sample - loss: 0.0460 - last_time_step_mse: 0.0317 - val_loss: 0.0444 - val_last_time_step_mse: 0.0298\n",
+      "219/219 [==============================] - 6s 27ms/step - loss: 0.0435 - last_time_step_mse: 0.0281 - val_loss: 0.0418 - val_last_time_step_mse: 0.0258\n",
       "Epoch 6/20\n",
-      "7000/7000 [==============================] - 10s 1ms/sample - loss: 0.0428 - last_time_step_mse: 0.0287 - val_loss: 0.0416 - val_last_time_step_mse: 0.0281\n",
+      "219/219 [==============================] - 6s 27ms/step - loss: 0.0404 - last_time_step_mse: 0.0249 - val_loss: 0.0382 - val_last_time_step_mse: 0.0229\n",
       "Epoch 7/20\n",
-      "7000/7000 [==============================] - 10s 1ms/sample - loss: 0.0403 - last_time_step_mse: 0.0266 - val_loss: 0.0394 - val_last_time_step_mse: 0.0270\n",
+      "219/219 [==============================] - 6s 27ms/step - loss: 0.0374 - last_time_step_mse: 0.0228 - val_loss: 0.0351 - val_last_time_step_mse: 0.0206\n",
       "Epoch 8/20\n",
-      "7000/7000 [==============================] - 10s 1ms/sample - loss: 0.0382 - last_time_step_mse: 0.0248 - val_loss: 0.0372 - val_last_time_step_mse: 0.0240\n",
+      "219/219 [==============================] - 6s 27ms/step - loss: 0.0352 - last_time_step_mse: 0.0208 - val_loss: 0.0337 - val_last_time_step_mse: 0.0185\n",
       "Epoch 9/20\n",
-      "7000/7000 [==============================] - 10s 1ms/sample - loss: 0.0367 - last_time_step_mse: 0.0232 - val_loss: 0.0355 - val_last_time_step_mse: 0.0218\n",
+      "219/219 [==============================] - 6s 27ms/step - loss: 0.0331 - last_time_step_mse: 0.0190 - val_loss: 0.0319 - val_last_time_step_mse: 0.0184\n",
       "Epoch 10/20\n",
-      "7000/7000 [==============================] - 10s 1ms/sample - loss: 0.0347 - last_time_step_mse: 0.0214 - val_loss: 0.0340 - val_last_time_step_mse: 0.0201\n",
+      "219/219 [==============================] - 6s 27ms/step - loss: 0.0322 - last_time_step_mse: 0.0185 - val_loss: 0.0311 - val_last_time_step_mse: 0.0172\n",
       "Epoch 11/20\n",
-      "7000/7000 [==============================] - 10s 1ms/sample - loss: 0.0333 - last_time_step_mse: 0.0199 - val_loss: 0.0327 - val_last_time_step_mse: 0.0192\n",
+      "219/219 [==============================] - 6s 28ms/step - loss: 0.0308 - last_time_step_mse: 0.0174 - val_loss: 0.0301 - val_last_time_step_mse: 0.0170\n",
       "Epoch 12/20\n",
-      "7000/7000 [==============================] - 10s 1ms/sample - loss: 0.0323 - last_time_step_mse: 0.0186 - val_loss: 0.0320 - val_last_time_step_mse: 0.0181\n",
+      "219/219 [==============================] - 6s 27ms/step - loss: 0.0300 - last_time_step_mse: 0.0166 - val_loss: 0.0291 - val_last_time_step_mse: 0.0159\n",
       "Epoch 13/20\n",
-      "7000/7000 [==============================] - 9s 1ms/sample - loss: 0.0313 - last_time_step_mse: 0.0178 - val_loss: 0.0304 - val_last_time_step_mse: 0.0170\n",
+      "219/219 [==============================] - 6s 27ms/step - loss: 0.0293 - last_time_step_mse: 0.0158 - val_loss: 0.0283 - val_last_time_step_mse: 0.0148\n",
       "Epoch 14/20\n",
-      "7000/7000 [==============================] - 9s 1ms/sample - loss: 0.0304 - last_time_step_mse: 0.0171 - val_loss: 0.0303 - val_last_time_step_mse: 0.0162\n",
+      "219/219 [==============================] - 6s 27ms/step - loss: 0.0286 - last_time_step_mse: 0.0154 - val_loss: 0.0277 - val_last_time_step_mse: 0.0149\n",
       "Epoch 15/20\n",
-      "7000/7000 [==============================] - 9s 1ms/sample - loss: 0.0304 - last_time_step_mse: 0.0173 - val_loss: 0.0297 - val_last_time_step_mse: 0.0168\n",
+      "219/219 [==============================] - 6s 27ms/step - loss: 0.0278 - last_time_step_mse: 0.0147 - val_loss: 0.0273 - val_last_time_step_mse: 0.0145\n",
       "Epoch 16/20\n",
-      "7000/7000 [==============================] - 9s 1ms/sample - loss: 0.0296 - last_time_step_mse: 0.0168 - val_loss: 0.0290 - val_last_time_step_mse: 0.0158\n",
+      "219/219 [==============================] - 6s 27ms/step - loss: 0.0275 - last_time_step_mse: 0.0142 - val_loss: 0.0272 - val_last_time_step_mse: 0.0149\n",
       "Epoch 17/20\n",
-      "7000/7000 [==============================] - 9s 1ms/sample - loss: 0.0297 - last_time_step_mse: 0.0168 - val_loss: 0.0293 - val_last_time_step_mse: 0.0175\n",
+      "219/219 [==============================] - 6s 28ms/step - loss: 0.0267 - last_time_step_mse: 0.0139 - val_loss: 0.0259 - val_last_time_step_mse: 0.0128\n",
       "Epoch 18/20\n",
-      "7000/7000 [==============================] - 9s 1ms/sample - loss: 0.0287 - last_time_step_mse: 0.0163 - val_loss: 0.0284 - val_last_time_step_mse: 0.0156\n",
+      "219/219 [==============================] - 6s 27ms/step - loss: 0.0264 - last_time_step_mse: 0.0135 - val_loss: 0.0258 - val_last_time_step_mse: 0.0130\n",
       "Epoch 19/20\n",
-      "7000/7000 [==============================] - 9s 1ms/sample - loss: 0.0283 - last_time_step_mse: 0.0158 - val_loss: 0.0279 - val_last_time_step_mse: 0.0148\n",
+      "219/219 [==============================] - 6s 27ms/step - loss: 0.0258 - last_time_step_mse: 0.0132 - val_loss: 0.0257 - val_last_time_step_mse: 0.0131\n",
       "Epoch 20/20\n",
-      "7000/7000 [==============================] - 9s 1ms/sample - loss: 0.0282 - last_time_step_mse: 0.0157 - val_loss: 0.0277 - val_last_time_step_mse: 0.0150\n"
+      "219/219 [==============================] - 6s 28ms/step - loss: 0.0252 - last_time_step_mse: 0.0124 - val_loss: 0.0250 - val_last_time_step_mse: 0.0121\n"
      ]
     }
    ],
