--- a/15_processing_sequences_using_rnns_and_cnns.ipynb
+++ b/15_processing_sequences_using_rnns_and_cnns.ipynb
@@ -508,7 +508,7 @@
     "    keras.layers.SimpleRNN(1, input_shape=[None, 1])\n",
     "])\n",
     "\n",
-    "optimizer = keras.optimizers.Adam(lr=0.005)\n",
+    "optimizer = keras.optimizers.Adam(learning_rate=0.005)\n",
     "model.compile(loss=\"mse\", optimizer=optimizer)\n",
     "history = model.fit(X_train, y_train, epochs=20,\n",
     "                    validation_data=(X_valid, y_valid))"
@@ -1374,7 +1374,7 @@
     "def last_time_step_mse(Y_true, Y_pred):\n",
     "    return keras.metrics.mean_squared_error(Y_true[:, -1], Y_pred[:, -1])\n",
     "\n",
-    "model.compile(loss=\"mse\", optimizer=keras.optimizers.Adam(lr=0.01), metrics=[last_time_step_mse])\n",
+    "model.compile(loss=\"mse\", optimizer=keras.optimizers.Adam(learning_rate=0.01), metrics=[last_time_step_mse])\n",
     "history = model.fit(X_train, Y_train, epochs=20,\n",
     "                    validation_data=(X_valid, Y_valid))"
    ]
@@ -3084,7 +3084,7 @@
     "    keras.layers.LSTM(128),\n",
     "    keras.layers.Dense(len(class_names), activation=\"softmax\")\n",
     "])\n",
-    "optimizer = keras.optimizers.SGD(lr=1e-2, clipnorm=1.)\n",
+    "optimizer = keras.optimizers.SGD(learning_rate=1e-2, clipnorm=1.)\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
     "              optimizer=optimizer,\n",
     "              metrics=[\"accuracy\", \"sparse_top_k_categorical_accuracy\"])\n",
@@ -3993,7 +3993,7 @@
     }
    ],
    "source": [
-    "optimizer = keras.optimizers.Nadam(lr=1e-3)\n",
+    "optimizer = keras.optimizers.Nadam(learning_rate=1e-3)\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer,\n",
     "              metrics=[\"accuracy\"])\n",
     "model.fit(train_set, epochs=20, validation_data=valid_set)"
